--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="assets/css/styles.css">    
 </head>
 <body>
-    <h1>My first Project</h1>
+    <h1>My first project</h1>
     <p>This is my First project built in an IDE</p>
     <img src="assets/images/ci-logo.png" alt="Code Institute Logo">
 <body
